--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ deploy:
   local_dir: build
   default_text_charset: "utf-8"
   bucket: "static-react-website-tutorial"
-  region: ap-southest-2
+  region: eu-west-2
